kubernetes/rendered/staging/services/go-backend-timoni/apps_v1_deployment_go-backend-timoni_foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: foo
    app.kubernetes.io/version: 0.0.0-devel
  name: foo
  namespace: go-backend-timoni
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: foo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foo
    spec:
      containers:
        - image: cgr.dev/chainguard/nginx:1.25.3@sha256:3dd8fa303f77d7eb6ce541cb05009a5e8723bd7e3778b95131ab4a2d12fadb8f
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          name: foo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
                - SETGID
                - SETUID
              drop:
                - ALL
            privileged: false
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: config
            - mountPath: /usr/share/nginx/html
              name: html
      serviceAccountName: foo
      volumes:
        - configMap:
            items:
              - key: nginx.default.conf
                path: nginx.default.conf
            name: foo-0242bdd0
          name: config
        - configMap:
            items:
              - key: index.html
                path: index.html
            name: foo-0242bdd0
          name: html
