kubernetes/rendered/staging/services/go-backend-timoni/v1_service_go-backend-timoni_foo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: foo
    app.kubernetes.io/version: 0.0.0-devel
  name: foo
  namespace: go-backend-timoni
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: foo
  type: ClusterIP
