kubernetes/rendered/staging/services/go-backend-timoni/v1_service_go-backend-timoni_go-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: go-backend
    app.kubernetes.io/version: 0.0.0-devel
  name: go-backend
  namespace: go-backend-timoni
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: go-backend
  type: ClusterIP
