kubernetes/rendered/staging/services/go-backend-timoni/gateway.networking.k8s.io_v1_httproute_go-backend-timoni_traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gateway-traefik-timoni.staging.kubestarterkit.com
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: go-backend
    app.kubernetes.io/version: 0.0.0-devel
  name: traefik
  namespace: go-backend-timoni
spec:
  hostnames:
    - gateway-traefik-timoni.staging.kubestarterkit.com
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: go-backend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
