kubernetes/rendered/staging/services/go-backend-timoni/networking.k8s.io_v1_ingress_go-backend-timoni_minimal-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress-nginx-timoni.staging.kubestarterkit.com
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: go-backend
    app.kubernetes.io/version: 0.0.0-devel
  name: minimal-nginx
  namespace: go-backend-timoni
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-nginx-timoni.staging.kubestarterkit.com
      http:
        paths:
          - backend:
              service:
                name: go-backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
